--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -39,7 +39,7 @@ body{
 }
 
 .navCont span{
-    color: white;
+    color: rgb(14, 13, 13);
     font-weight: 500;
     letter-spacing: 3px;
     position: relative;
